--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,16 @@
 Changelog
 crombi_kkgapps_20140301
 Updated updater-script
-Updated Google Plus to version
-Updated Google Core Services and lib files to version
-Updated Google Experience Launcher to version
+Updated Google Plus to version 4.3.0.62241793
+Updated Google Core Services and lib files to latest version 
+Updated Google Experience Launcher to version 1.0.9
  
 crombi_kkgapps_20140223
-Updated Gmail2 to version
-Updated Hangouts and lib files to version
-Updated Google Maps to version
-Updated YouTube to version
-Updated Google Now and lib files to version
-Updated Play Store to version
-Removed Google Calendar as already provided in CMB rom
+Updated Gmail2 to version 4.7.2
+Updated Hangouts and lib files to version 2.0.303
+Updated Google Maps to version 7.6.1
+Updated YouTube to version 5.3.32
+Updated Google Now and lib files to version 3.2.17.1009776arm
+Updated Play Store to version 4.5.10
+Removed Google Calendar as a version is already provided in rom
 
