CROMBi-kk GApps rollup update 20140315
crombi_kkgapps_20140315
Updated YouTube to version 5.5.27
Updated Google Maps to version 7.7.0
Updated Google Search and Libs to version 3.3.11

crombi_kkgapps_20140312
Updated Google Calendarsync adapter to latest version
Fixed the issue of GApps not flashing if not done directly after ROM

crombi_kkgapps_20140309
Updated Google Bookmarksync adapter to latest version

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,16 @@
 Changelog
+crombi_kkgapps_20140315
+Updated YouTube to version 5.5.27
+Updated Google Maps to version 7.7.0
+Updated Google Search and Libs to version 3.3.11
+
+crombi_kkgapps_20140312
+Updated Google Calendarsync adapter to latest version
+Fixed the issue of GApps not flashing if not done directly after ROM
+
+crombi_kkgapps_20140309
+Updated Google Bookmarksync adapter to latest version
+
 crombi_kkgapps_20140308
 If Gapps is flashed after CROMBi-kk it should now in ROM2SD mode - no ROM2SD1.zip required
 Updated Google TTS to version 3.0.10.1047791
